src/test/ui/llvm-asm/llvm-asm-in-bad-modifier.stderr
error[E0662]: input operand constraint contains '='
  --> $DIR/llvm-asm-in-bad-modifier.rs:23:44
   |
LL |         llvm_asm!("mov $1, $0" : "=r"(x) : "=r"(5));
   |                                            ^^^^

error[E0663]: input operand constraint contains '+'
  --> $DIR/llvm-asm-in-bad-modifier.rs:24:44
   |
LL |         llvm_asm!("mov $1, $0" : "=r"(y) : "+r"(5));
   |                                            ^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0662, E0663.
For more information about an error, try `rustc --explain E0662`.
